# sqldumpdiff

./: .gitignore  Makefile  README.md  build.sh  justfile  pyproject.toml  sqldumpdiff.py
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  benchmarks.md  consistency.md  usage.md
go/: .gitignore  README.md  go.mod  go.sum
go/cmd/sqldumpdiff/: main.go
go/internal/comparer/: delta.go  mmap_unix.go  mmap_windows.go  writer.go
go/internal/logger/: logger.go
go/internal/parser/: insert.go  schema.go
go/internal/store/: memory.go
java/: .gitignore  README.md  build-native.sh  dependency-reduced-pom.xml  pom.xml
java/src/main/java/com/sqldumpdiff/: BinaryTableStore.java  Blake3Hasher.java  ComparisonResult.java  DeltaGenerator.java  InsertParser.java  InsertRow.java  NoOpProgressBarConsumer.java  ProgressBarFactory.java  SQLiteTableStore.java  SchemaParser.java  SqlDumpDiff.java  SqliteProfile.java  SqliteProfileLoader.java  SqliteProfilesFile.java  TableBinIO.java  TableCompareResult.java  TableComparer.java  TableComparison.java  TableTiming.java  ValueRow.java  WriteTiming.java
java/src/main/resources/: logging.properties
python/: README.md  benchmark.sh  pyproject.toml  sqldumpdiff.py  sqldumpdiff.spec  sqlite_profiles.yaml
rust/: Cargo.toml  store_profiles.yaml
rust/src/: comparer.rs  logger.rs  main.rs  progress.rs
rust/src/parser/: insert.rs  mod.rs  schema.rs
scripts/: bench.sh  run-go.sh  run-java.sh  run-py.sh
