[project]
name = "sqldumpdiff"
version = "0.1.0"
description = "Compare SQL dump files and generate delta update scripts"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "tqdm>=4.66.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0.0",
]

[build-system]
requires = [
    "setuptools>=68",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["sqldumpdiff"]
